mobily/vcp/k8s/consportals_sa_mobily_vcp_adminportal.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consportals-sa-mobily-vcp-adminportal-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: vcp-adminportal
  template:
    metadata:
      labels:
        component: vcp-adminportal
    spec:
      containers:
        - name: vcp-adminportal
          image: mersin.telenity.com/com/telenity/consportals-sa-mobily-vcp-adminportal:1.0.0.1
          ports:
            - containerPort: 8080
