mobily/vcp/k8s/consportals_sa_mobily_vcp_ccportal.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: consportals-sa-mobily-vcp-ccportal-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      component: vcp-ccportal
  template:
    metadata:
      labels:
        component: vcp-ccportal
    spec:
      containers:
        - name: vcp-ccportal
          image: mersin.telenity.com/com/telenity/consportals-sa-mobily-vcp-ccportal:1.0.0.1
          ports:
            - containerPort: 8081
