mobily/vcp/k8s/consportals_sa_mobily_vcp_httpd.pod.yaml

apiVersion: v1
kind: Pod
metadata:
  name: consportals-sa-mobily-vcp-httpd
  labels:
    component: vcp-httpd
spec:
  containers:
    - name: vcp-httpd
      image: mersin.telenity.com/com/telenity/consportals-sa-mobily-vcp-httpd:1.0.0.1
      ports:
        - containerPort: 80
        - containerPort: 443
      resources:
        limits:
          memory: "512Mi"
          cpu: "500m"
        requests:
          memory: "256Mi"
          cpu: "250m"
