mobily/vcp/k8s/consportals_sa_mobily_vcp_a3gw.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consportals-sa-mobily-vcp-a3gw-service
spec:
  type: ClusterIP
  selector:
    component: vcp-a3gw
  ports:
    - name: portals
      port: 8444
      targetPort: 8444
    - name: auth
      port: 8445
      targetPort: 8445
