mobily/vcp/k8s/consportals_sa_mobily_vcp_adminportal.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consportals-sa-mobily-vcp-adminportal-service
spec:
  type: ClusterIP
  selector:
    component: vcp-adminportal
  ports:
    - port: 8080
      targetPort: 8080
