mobily/vcp/k8s/consportals_sa_mobily_vcp_ccportal.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consportals-sa-mobily-vcp-ccportal-service
spec:
  type: ClusterIP
  selector:
    component: vcp-ccportal
  ports:
    - port: 8081
      targetPort: 8081
