mobily/vcp/k8s/consportals_sa_mobily_vcp_httpd.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: consportals-sa-mobily-vcp-httpd-service
spec:
  type: ClusterIP
  selector:
    component: vcp-httpd
  ports:
    - name: http
      port: 80
      targetPort: 80
    - name: https
      port: 443
      targetPort: 443
